--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@types/node": "^18",
     "nuxt": "^3.5.1",
     "sass": "^1.62.1"
+  },
+  "dependencies": {
+    "swiper": "^9.3.2"
   }
 }
